{
  "version": 4,
  "terraform_version": "1.3.0",
  "serial": 324,
  "lineage": "d8e896cd-4e06-ecaf-8934-eb2fe4284d99",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/eb3422ea-a2e9-4ae0-b52c-5b0ae72508e5/resourceGroups/proxyResourceGroup/providers/Microsoft.Network/networkInterfaces/nic-0",
            "internal_domain_name_suffix": "gsqvublftjoelncyi42kvhifpa.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "myNicConfiguration",
                "primary": true,
                "private_ip_address": "10.0.1.6",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/eb3422ea-a2e9-4ae0-b52c-5b0ae72508e5/resourceGroups/proxyResourceGroup/providers/Microsoft.Network/publicIPAddresses/pip-0",
                "subnet_id": "/subscriptions/eb3422ea-a2e9-4ae0-b52c-5b0ae72508e5/resourceGroups/proxyResourceGroup/providers/Microsoft.Network/virtualNetworks/myVnet/subnets/mySubnet"
              }
            ],
            "location": "eastus",
            "name": "nic-0",
            "private_ip_address": "10.0.1.6",
            "private_ip_addresses": [
              "10.0.1.6"
            ],
            "resource_group_name": "proxyResourceGroup",
            "tags": {
              "environment": "Terraform Demo"
            }
          },
          "dependencies": [
            "azurerm_public_ip.myterraformpublicip",
            "azurerm_resource_group.myterraformgroup",
            "azurerm_subnet.myterraformsubnet",
            "azurerm_virtual_network.myterraformnetwork"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/eb3422ea-a2e9-4ae0-b52c-5b0ae72508e5/resourceGroups/proxyResourceGroup/providers/Microsoft.Network/networkInterfaces/nic-1",
            "internal_domain_name_suffix": "gsqvublftjoelncyi42kvhifpa.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "myNicConfiguration",
                "primary": true,
                "private_ip_address": "10.0.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/eb3422ea-a2e9-4ae0-b52c-5b0ae72508e5/resourceGroups/proxyResourceGroup/providers/Microsoft.Network/publicIPAddresses/pip-1",
                "subnet_id": "/subscriptions/eb3422ea-a2e9-4ae0-b52c-5b0ae72508e5/resourceGroups/proxyResourceGroup/providers/Microsoft.Network/virtualNetworks/myVnet/subnets/mySubnet"
              }
            ],
            "location": "eastus",
            "name": "nic-1",
            "private_ip_address": "10.0.1.5",
            "private_ip_addresses": [
              "10.0.1.5"
            ],
            "resource_group_name": "proxyResourceGroup",
            "tags": {
              "environment": "Terraform Demo"
            }
          },
          "dependencies": [
            "azurerm_public_ip.myterraformpublicip",
            "azurerm_resource_group.myterraformgroup",
            "azurerm_subnet.myterraformsubnet",
            "azurerm_virtual_network.myterraformnetwork"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/eb3422ea-a2e9-4ae0-b52c-5b0ae72508e5/resourceGroups/proxyResourceGroup/providers/Microsoft.Network/networkInterfaces/nic-2",
            "internal_domain_name_suffix": "gsqvublftjoelncyi42kvhifpa.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "myNicConfiguration",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/eb3422ea-a2e9-4ae0-b52c-5b0ae72508e5/resourceGroups/proxyResourceGroup/providers/Microsoft.Network/publicIPAddresses/pip-2",
                "subnet_id": "/subscriptions/eb3422ea-a2e9-4ae0-b52c-5b0ae72508e5/resourceGroups/proxyResourceGroup/providers/Microsoft.Network/virtualNetworks/myVnet/subnets/mySubnet"
              }
            ],
            "location": "eastus",
            "name": "nic-2",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "proxyResourceGroup",
            "tags": {
              "environment": "Terraform Demo"
            }
          },
          "dependencies": [
            "azurerm_public_ip.myterraformpublicip",
            "azurerm_resource_group.myterraformgroup",
            "azurerm_subnet.myterraformsubnet",
            "azurerm_virtual_network.myterraformnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "myterraformnsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/eb3422ea-a2e9-4ae0-b52c-5b0ae72508e5/resourceGroups/proxyResourceGroup/providers/Microsoft.Network/networkSecurityGroups/myNetworkSecurityGroup",
            "location": "eastus",
            "name": "myNetworkSecurityGroup",
            "resource_group_name": "proxyResourceGroup",
            "security_rule": [],
            "tags": {
              "environment": "Terraform Demo"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.myterraformgroup"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "incoming_proxy_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "46642",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/eb3422ea-a2e9-4ae0-b52c-5b0ae72508e5/resourceGroups/proxyResourceGroup/providers/Microsoft.Network/networkSecurityGroups/myNetworkSecurityGroup/securityRules/incoming_proxy_traffic",
            "name": "incoming_proxy_traffic",
            "network_security_group_name": "myNetworkSecurityGroup",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "proxyResourceGroup",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.myterraformnsg",
            "azurerm_resource_group.myterraformgroup"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "incoming_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/eb3422ea-a2e9-4ae0-b52c-5b0ae72508e5/resourceGroups/proxyResourceGroup/providers/Microsoft.Network/networkSecurityGroups/myNetworkSecurityGroup/securityRules/SSH",
            "name": "SSH",
            "network_security_group_name": "myNetworkSecurityGroup",
            "priority": 1001,
            "protocol": "Tcp",
            "resource_group_name": "proxyResourceGroup",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.myterraformnsg",
            "azurerm_resource_group.myterraformgroup"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "outbound_internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Outbound",
            "id": "/subscriptions/eb3422ea-a2e9-4ae0-b52c-5b0ae72508e5/resourceGroups/proxyResourceGroup/providers/Microsoft.Network/networkSecurityGroups/myNetworkSecurityGroup/securityRules/outbound_internet_access",
            "name": "outbound_internet_access",
            "network_security_group_name": "myNetworkSecurityGroup",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "proxyResourceGroup",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.myterraformnsg",
            "azurerm_resource_group.myterraformgroup"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "myterraformpublicip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/eb3422ea-a2e9-4ae0-b52c-5b0ae72508e5/resourceGroups/proxyResourceGroup/providers/Microsoft.Network/publicIPAddresses/pip-0",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.127.79.253",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "pip-0",
            "resource_group_name": "proxyResourceGroup",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "Terraform Demo"
            }
          },
          "dependencies": [
            "azurerm_resource_group.myterraformgroup"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/eb3422ea-a2e9-4ae0-b52c-5b0ae72508e5/resourceGroups/proxyResourceGroup/providers/Microsoft.Network/publicIPAddresses/pip-1",
            "idle_timeout_in_minutes": 4,
            "ip_address": "13.82.90.26",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "pip-1",
            "resource_group_name": "proxyResourceGroup",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "Terraform Demo"
            }
          },
          "dependencies": [
            "azurerm_resource_group.myterraformgroup"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/eb3422ea-a2e9-4ae0-b52c-5b0ae72508e5/resourceGroups/proxyResourceGroup/providers/Microsoft.Network/publicIPAddresses/pip-2",
            "idle_timeout_in_minutes": 4,
            "ip_address": "13.90.80.144",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "pip-2",
            "resource_group_name": "proxyResourceGroup",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "Terraform Demo"
            }
          },
          "dependencies": [
            "azurerm_resource_group.myterraformgroup"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "myterraformsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/eb3422ea-a2e9-4ae0-b52c-5b0ae72508e5/resourceGroups/proxyResourceGroup/providers/Microsoft.Network/virtualNetworks/myVnet/subnets/mySubnet",
            "name": "mySubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "proxyResourceGroup",
            "virtual_network_name": "myVnet"
          },
          "dependencies": [
            "azurerm_resource_group.myterraformgroup",
            "azurerm_virtual_network.myterraformnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "myterraformnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "055aa134-9a65-455c-b458-47b8aa9d0578",
            "id": "/subscriptions/eb3422ea-a2e9-4ae0-b52c-5b0ae72508e5/resourceGroups/proxyResourceGroup/providers/Microsoft.Network/virtualNetworks/myVnet",
            "location": "eastus",
            "name": "myVnet",
            "resource_group_name": "proxyResourceGroup",
            "tags": {
              "environment": "Terraform Demo"
            }
          },
          "dependencies": [
            "azurerm_resource_group.myterraformgroup"
          ]
        }
      ]
    }
  ]
}